# superpod-dcgm-exporter

./: .gitignore  DEPENDENCIES.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml  setup.sh
automation/: README.md  deploy_dcgm_exporter.py
automation/configs/: config.example.json  config.existing-prometheus.json
automation/role-monitor/: bcm-role-monitor-dcgm.service  bcm_role_monitor.py  bcm_role_monitor_dcgm.py  deploy_dcgm_exporter.py
automation/tools/: README.md  test_deployment.py
docs/: BCM-Imaging-Workflow.md  DCGM-Compatibility.md  How-To-Guide.md  Troubleshooting.md  prometheus-config-sample.yml
grafana/: README.md  dcgm-single-job-stats.json
scripts/: build_dcgm_exporter.sh
slurm/epilog.d/: dcgm_job_map.sh
slurm/prolog.d/: dcgm_job_map.sh
systemd/: dcgm-exporter.service
