[project]
name = "dcgm-exporter-superpod"
version = "1.0.0"
description = "Automated deployment of NVIDIA DCGM Exporter for BCM-managed SuperPOD environments"
authors = [
    {name = "NVIDIA", email = "support@nvidia.com"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

